Last commit, fixing horizontal scrolling issue

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     font-family: 'Raleway', sans-serif;
     margin:0;
     font-weight: 500;
+    max-width: 100%;
 }
 
 a{
